# AdventOfCode

./: AdventOfCode.cabal  README.md
2020/: AdventOfCode.cabal  Day02.hs  Day03.hs  Day1.hs  Main.hs  hie.yaml
2021/: .rustfmt.toml
2021/src/: main.rs  runners.rs  util.rs
2021/src/runners/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs
2023/src/: main.rs  util.rs
2023/src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs
2024/: build.zig
2024/src/: main.zig
