cabal-version:       3.0

name:                aoc2020
version:             0.0.0.1
license:             MPL-2.0
license-file:        LICENSE
author:              Wolfgang E. Sanyer
maintainer:          WolfgangESanyer@gmail.com
build-type:          Simple

executable aoc2020
    main-is: Main.hs
    build-depends:
        base >=4.13 && <4.14
    hs-source-dirs:
        2020
    default-language:    Haskell2010
